change some typos

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <div class="carousel-item">
         <div class="carousel-container">
           <h2 class="animate__animated animate__fadeInDown">Services</h2>
-          <p class="animate__animated animate__fadeInUp"> Nous offrons une variété de service en lien avec vos besoins en matière de sécurité </p>
+          <p class="animate__animated animate__fadeInUp"> Nous offrons une variété de Service en lien avec vos besoins en matière de sécurité </p>
           <a href="#services" class="btn-get-started animate__animated animate__fadeInUp scrollto">En lire davantage</a>
         </div>
       </div>
@@ -319,7 +319,7 @@
                   <li><i class="ri-check-double-line"></i>  Bon jugement</li>
                   <li><i class="ri-check-double-line"></i> Disponible</li>
                   <li><i class="ri-check-double-line"></i> Polyvalent</li>
-                  <li><i class="ri-check-double-line"></i> Anglais fonctionnel est un plus</li>
+                  <li><i class="ri-check-double-line"></i> Un anglais fonctionnel est un atout</li>
                 </ul>
               </div>
               <div class="col-lg-6 order-1 order-lg-2 text-center">
